# diplomat

./: .env.template  .gitattributes  .gitignore  ARCHITECTURE.md  ARCH_adversarial.md  ARCH_analyst.md  ARCH_coaching.md  ARCH_context_assembler.md  ARCH_conversation_model.md  ARCH_event_store.md  ARCH_extraction.md  ARCH_flow.md  ARCH_generation.md  ARCH_mechanism_classifier.md  ARCH_orchestrator.md  ARCH_persona.md  ARCH_reconciliation.md  ARCH_review_gate.md  ARCH_scenario_authoring.md  ARCH_self_play.md  ARCH_state_manager.md  ARCH_transport.md  ASSESSMENT.md  CLANKMATES_ARENA_PLAN.md  CLAUDE.md  CLI_REFERENCE.md  CODEX.md  DECISIONS.md  DEVLOG.md  DEVLOG_archive.md  DEVPLAN.md  DIAGRAMS.md  GAME_GUIDE.md  GOVERNANCE.md  Multi-Party Negotiation Scenarios.md  NEXT_STEPS.md  PHASE_42_PLAN.md  PROJECT.md  README.md  RESEARCH_NOTES.md  (+16 more)
.state/: decisions.json  devlog.jsonl  phases.json  project.json  steps.json  telemetry.jsonl
clankdocs/: CLANKMATES_ARENA_PLAN.md  CLANKMATES_NOTES.md
config/: coaching_routes.yaml  diplomat.service  faction_prompt.txt  pipeline.yaml  pipeline_smoke.yaml  pipeline_test.yaml
guides/: CLI_REFERENCE.md  RUN_PROTOCOL.md  SCENARIO_GUIDE.md  SMOKE_RUNBOOK.md  diplomat-testing-doc.md
papers/: .gitignore  OFFERING.md  OPEN_ITEMS.md  PAPER_PLAN.md  PITCH.md  RELATED_WORK_DRAFT.md  TACTIC_LIBRARY.md  WORK_SEQUENCING.md
scenarios/: c5a_probe_absolute.jsonl  c5a_probe_rel_batna_only.jsonl  c5a_probe_rel_both.jsonl  c5a_probe_rel_pareto.jsonl  c5b2_A_control.jsonl  c5b2_B_multi.jsonl  c5b2_C_full.jsonl  c5b2_D_logroll.jsonl  water_rights.md  (+11 more)
(+266 files in other folders)
